# mycelium

./: Cargo.toml  README.md  to_do.txt
.kiro/specs/mycnet/: README.md  design.md  map.md  outline.md  requirements.md  tasks.md
.kiro/specs/mycnet/architecture/: README.md
.kiro/specs/mycnet/architecture/container-models/: distributed-ram-system.md  overview.md
.kiro/specs/mycnet/architecture/core-systems/: bootstrap-split-brain.md  consensus-system.md  dynamic-component-system.md  error-handling.md  k3s-integration.md  service-lifecycle.md  spore-data-structure.md  spore-system.md  storage-system.md  update-system.md
.kiro/specs/mycnet/architecture/interfaces/: data-models.md
.kiro/specs/mycnet/architecture/networking/: inter-network-communication.md  network-protocols.md
.kiro/specs/mycnet/architecture/security/: network-identity.md  security-architecture.md
.kiro/specs/mycnet/architecture/self-hosting/: distributed-management.md  minimal-core.md
.kiro/specs/mycnet/documentation/: DEVELOPMENT_ROADMAP.md  IMPLEMENTATION_READINESS_ASSESSMENT.md  PROJECT_STRUCTURE_PROPOSAL.md  README.md  REORGANIZATION_SUMMARY.md  potential-improvements.md
.kiro/specs/mycnet/documentation/validation-status/: architecture-validation-report.md  development-environment.md  implementation-roadmap.md  technology-validation.md
.kiro/specs/mycnet/reference/: README.md  adaptive-throttling-system.rs  container-deployment-models.md  kubevirt-integration.rs  latency-adaptation-strategies.md  rhizomorph-connection-layer.md  rust-implementation-patterns.md  testing-framework.md
.kiro/specs/mycnet/reference/deployment/: endophyte-configurations.yaml
.kiro/specs/mycnet/reference/isolation-models/: hybrid-isolation-manager.rs
.kiro/specs/mycnet/reference/service-types/: endomycetes-vs-endophytes.md
.kiro/specs/mycnet/reference/virtual-computer/: distributed-ram-system.rs  distributed-virtual-computer.rs
src/: Cargo.toml  README.md
src/mycnet-consensus/: Cargo.toml  README.md
src/mycnet-consensus/src/: lib.rs
src/mycnet-core/: Cargo.toml  README.md
src/mycnet-core/src/: lib.rs
src/mycnet-networking/: Cargo.toml  README.md
src/mycnet-networking/src/: lib.rs
src/mycnet-security/: Cargo.toml  README.md
src/mycnet-security/src/: lib.rs
src/mycnet-spores/: Cargo.toml  README.md
src/mycnet-spores/src/: lib.rs
src/mycnet-storage/: Cargo.toml  README.md
src/mycnet-storage/src/: lib.rs
