[workspace]
members = [
    "mycnet-core",
    "mycnet-spores", 
    "mycnet-consensus",
    "mycnet-storage",
    "mycnet-networking",
    "mycnet-security",
]

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-util = "0.7"

# Networking
quinn = "0.10"
rustls = "0.22"
webpki-roots = "0.26"

# Serialization
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
postcard = "1.0"

# Cryptography
ed25519-dalek = "2.0"
x25519-dalek = "2.0"
chacha20poly1305 = "0.10"
blake3 = "1.5"

# Consensus and distributed systems
async-raft = "0.7"
crdt = "4.3"

# Time and ordering
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }

# Storage
sled = "0.34"

# Kubernetes integration
kube = { version = "0.87", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.20", features = ["v1_28"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Testing
proptest = "1.4"

# Additional dependencies
getrandom = "0.2"
rand = "0.8"