[package]
name = "mycnet-core"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

# Core dependencies for minimal core components
ed25519-dalek = { workspace = true }
blake3 = { workspace = true }
getrandom = { workspace = true }
rand = { workspace = true }