[package]
name = "mycnet-security"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

# Cryptographic primitives
ed25519-dalek = { workspace = true }
x25519-dalek = { workspace = true }
chacha20poly1305 = { workspace = true }
blake3 = { workspace = true }

# TLS integration
rustls = { workspace = true }
webpki-roots = { workspace = true }