[package]
name = "mycnet-spores"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
bincode = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

# Cryptography for spore validation
ed25519-dalek = { workspace = true }
blake3 = { workspace = true }

# Networking for spore exchange
quinn = { workspace = true }
rustls = { workspace = true }

# Storage for spore persistence
sled = { workspace = true }