[package]
name = "mycnet-storage"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

# Storage backends
sled = { workspace = true }

# Kubernetes integration for CSI
kube = { workspace = true }
k8s-openapi = { workspace = true }